fixed donate for mobile (iPhone 6)
mobile view no longer overlaps into interests div.

TODO:

-fix display order: Column
-hover on mobile?
-show bigger QR CODE.
-add link colors

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,33 @@
     display: inline-block;
   }
 
+  #intro #news #paypalInfo {
+    position: absolute;
+    bottom: 50vh;
+    left: 30vh;
+    display: flex;
+    flex-direction: column;
+  }
+  #intro #news #paypalQR {
+    height: inherit;
+    width: 10vw;
+    order: 1;
+  }
+
+  /* 
+  #intro #news #paypalQR:hover {
+    position: relative;
+    height: inherit;
+    top: 20vh;
+    right: 20vw;
+    width: 40vw;
+    order: 1;
+  }
+   */
+  #intro #news #donateText {
+    order: 2;
+  }
+
   #skills {
     color: red;
     min-height: 100vh;
